[package]
name = "zbu"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A secure backup utility with AES-256-GCM encryption and Zstandard compression"
license = "MIT"
repository = "https://github.com/yourusername/zbu"
keywords = ["backup", "encryption", "security", "compression", "gui"]
categories = ["command-line-utilities", "cryptography", "compression"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
openssl = "0.10"
rand = "0.8"
tar = "0.4"
zstd = "0.11"
pbkdf2 = "0.10"
sha2 = "0.10"
hmac = "0.12"

[dependencies.iced]
version = "0.10"
features = ["tokio"]
optional = true

[dependencies.rfd]
version = "0.15.4"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]
optional = true

[features]
default = []
gui = ["iced", "rfd", "tokio"]

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 16
strip = true

[profile.dev]
opt-level = 0
debug = 1
